tests/tests/neg/surface/closure07.rs
#[flux::sig(fn (f: F) -> i32[90]
            where F: FnOnce(i32[@king]) -> i32[king+1])]
pub fn test0<F>(f: F) -> i32
where
    F: FnOnce(i32) -> i32,
{
    f(99)
} //~ ERROR refinement type
